--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
