--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.12",
+    "razorpay": "^2.9.6",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
