--- a/project_frontend/.env
+++ b/project_frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://rabuste-coffee-project-gwoc-26.onrender.com/
+VITE_API_URL=https://rabuste-coffee-project-gwoc-26.onrender.com/api
