--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.12",
     "razorpay": "^2.9.6",
+    "resend": "^6.7.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
